Changes in 1.1.31.2:
  o Server changes:
    * Added EntitlementTimeout exception to notify clients that an
      entitlement has timed out from the authentication cache (CNY-1862)
    * Added remote_ip to user and entitlement based external authentication
      checks (CNY-1864)

  o Proxy changes:
    * Proxy can now inject entitlements and user authentication on behalf
      of clients (CNY-1836)

  o Client changes:
    * Reread entitlements from disk when EntitlementTimeout is received
      (CNY-1862)

Changes in 1.1.31.1:
  o Bug Fix:
    * Proxies used wrong getChangeSet call for old protocol versions (CNY-1803)

Changes in 1.1.31:
  o Bug Fix:
    * A bug that caused an Internal Server Error when a Conary proxy
      attempted to convert a changeset for an older client when the
      upstream Conary repository was not running 1.1.29 or later has
      been fixed. (CNY-1792)

Changes in 1.1.30:
  o Bug Fixes:
    * The version cache for upstream servers in the Conary proxy
      incorrectly included user information in the URL, causing
      KeyErrors when users were switched to anonymous. (CNY-1787)
    * An issue related to the formatting of repository map entries
      has been fixed. (CNY-1788)
    * The Conary proxy no longer supports protocol version 41
      (and hasn't for a few releases).
    * An issue that was affecting the performance of the getChangeSet
      API call on Conary proxies running in an apache environment
      has been fixed.

Changes in 1.1.29:
  o Client Changes:
    * In conaryrc files, repositoryMap entries can now use wildcards
      for the server name.
    * Multiple entitlements can now be sent to each server.
    * Server names in entitlements may include wildcards.
    * Entitlements may be placed in conaryrc files now using
      'entitlement server entitlement'. "conary config" displays
      entitlement information.
    * A bug that limited a single MetadataItem to less than 64 KiB has