@@ -78,7 +78,11 @@ for entry in iterator:
     userInfo = []
     if entry.user is not None:
         userInfo.append("user=%s" % entry.user)
-    if entry.entClass is not None:
+
+    if entry.revision > 2:
+        userInfo.append("entitlements=[%s]" % 
+                            ",".join(x[1] for x in entry.entitlements))
+    elif entry.entClass is not None:
         userInfo.append("entclass=%s" % entry.entClass)
         userInfo.append("entkey=%s" % entry.entKey)
 
